Implementing users CRUD and tests, and configuration rspec helper, swagger helper and configuration test enviroment
